# tensor_core_gemm

./: .gitignore  CMakeLists.txt  main.cc  tensor_core_gemm_advanced.cu  tensor_core_gemm_naive.cu  tensor_core_gemm_naive.h  wmma_prof.nsys-rep
